--- a/.env
+++ b/.env
@@ -16,8 +16,8 @@ MONGO_URI=mongodb+srv://priyadeshmukh15pd:5QCoLpftJ5wPnA4J@cluster0.cm3uq.mongod
 # MONGO_URI=mongodb+srv://priyadeshmukh15pd:6sBHtJ9dn5s9a4U4@todo.ryxlb.mongodb.net/
 
 
-newproject
+# newproject
 
-3HZDTI5c3kgj96mW
+#3HZDTI5c3kgj96mW
 
-mongodb+srv://priyadeshmukh15pd:UoF734sfnSXn1mXk@cluster0.viejs.mongodb.net/
+#mongodb+srv://priyadeshmukh15pd:UoF734sfnSXn1mXk@cluster0.viejs.mongodb.net/
