--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=8080
 # MONGO_URI=mongodb+srv://priyadeshmukh15pd:UoF734sfnSXn1mXk@cluster0.viejs.mongodb.net/
-MONGO_URI=mongodb+srv://priyadeshmukh15pd:5QCoLpftJ5wPnA4J@cluster0.cm3uq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-
+#MONGO_URI=mongodb+srv://priyadeshmukh15pd:5QCoLpftJ5wPnA4J@cluster0.cm3uq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb://localhost:27017
 # password mongodbatlas=5QCoLpftJ5wPnA4J
 # ip = 152.58.22.202
 
